--- a/client/src/components/Modals/EventModal.css
+++ b/client/src/components/Modals/EventModal.css
@@ -14,6 +14,12 @@
 .date {
   margin-top: 0.7rem;
 }
+.eventInfoContainer {
+  margin-top: 5vh;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+}
 
 .event_info {
   /* border: 3px solid var(--black); */
@@ -38,12 +44,16 @@
 #eventLink {
   margin-top: 0.7rem;
   font-size: 1.02rem;
+  border: 3px solid var(--black);
+  width:32vw;
+  
 }
 
 .event_info > .buttonContainer {
   font-size: 1.1rem;
   margin-top: 1.5rem;
   position: relative;
+
 }
 
 .event_info > .buttonContainer > button {
