--- a/client/src/components/Right/Forum/ForumList.css
+++ b/client/src/components/Right/Forum/ForumList.css
@@ -13,8 +13,9 @@
     color: var(--black);
     box-shadow: 9px 9px var(--black); 
     margin: 1.7vw 1.1vw;
-    max-height: 45vh;
+    max-height: 43vh;
     align-self: center;
+    overflow: auto;
 
   }
   
@@ -69,8 +70,9 @@
     flex-direction: column;
     color: var(--black);
     box-shadow: 9px 9px var(--black); 
-    margin: 2vw 1vw;
+    margin: 1vw 1vw;
     align-self: center;
+    overflow: auto;
   }
   
   .ForumList_header {
