--- a/client/src/components/Modals/ForumModal.css
+++ b/client/src/components/Modals/ForumModal.css
@@ -15,8 +15,8 @@
 
   .forum_title {
     font-size: 1rem;
-    margin: 0.7rem 0;
-
+    margin-top: 6vh;
+    color: var(--blue);
   }
 
   .forum_description{
